syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC";

package SecurityLoginsLog;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";        //contains nullable wrappers

 service SecurityLoginsLog {
   rpc Add (SecurityLoginsLogProtos) returns (google.protobuf.Empty);
   rpc Get (GetSecurityLoginsLogRequest) returns (SecurityLoginsLogProtos);
   rpc Update (SecurityLoginsLogProtos) returns (google.protobuf.Empty);
   rpc Delete (SecurityLoginsLogProtos) returns (google.protobuf.Empty);
 }

 message SecurityLoginsLogProto {
    string Id = 1;           //Guid -> string parse tostring
    bool IsSuccesful = 2;
    string Login = 3;
    google.protobuf.Timestamp LogonDate = 4;
    string SourceIP = 5;
}

 message GetSecurityLoginsLogRequest {
	 string id = 1;
}

 message SecurityLoginsLogProtos {
	repeated SecurityLoginsLogProto pocos = 1;
}
